# Spaghetti-BASIC

./: CMakeLists-wall.txt  CMakeLists.txt  README.md  diff.txt  gitignore
Astronomy_BASIC/: 3304911.html  3304911b.html  3304911c.html
basic/: ARTILLERY3.bas  ELIZA.BAS  basic_test.bas  debug_full_test.bas  demo.bas  full_capability_test.bas  full_feature_test.bas  full_statement_test.bas  full_system_test.bas  full_test_suite._2025_05_01bas  full_test_suite.bas  hello_transpile.bas  hello_transpile.bas.cpp  interpreter_feature_test.bas  interpreter_feature_test.cpp  lunar.bas  mat_combined_test.bas  mat_combined_test_fixed.bas  mat_lu_test.bas  mat_rank_inverse_solve_test.bas  mat_test_script_corrected.bas  select-type-mismatch-2.bas  test_asin_acos_pow.bas
doc/: BNF.txt  BNF_FINAL.txt  BNF_FINAL_IDENTIFIER.txt  BNF_FLOATING_FINAL.txt  BNF_UPDATED.txt  BNF_extended.txt  BNF_transpose_lu_rank.txt
include/: ALIGNED_CONTAINERS.h  ExtendedMATOPS.hpp  INTERPRETER.h  VarInfo.h  fileio.h  interpreter.h  matrix_access.h  matrixops.h  matrixvalue.h  mivic.txt  program_structure.h  program_structure.patch  program_structure_fixed.h  program_structure_v2.h  program_structure_v3.h  renumber.h  renumber_map.h  syntax.h  syntax_updated.cpp  von.txt
src/: 000-global.cpp  0MAT_Support.cpp  0inline_functsupport.cpp  0inline_functsupport_final.cpp  CMakeLists.txt  DEF.cpp  DEF2.cpp  DIM.cpp  FOR.cpp  FOR_NEXT_WHILE_WEND_REPETE_UNTILL.cpp  GO.cpp  GOSUB.cpp  IF.cpp  INPUT.cpp  INPUTFILE.cpp  InputOutput.cpp  InputOutput_fixed.cpp  LET.cpp  MATPRINTFILE.cpp  MATREAD.cpp  OPEN_CLOSE.cpp  PRINT.cpp  PRINTFILEUSING2.cpp  READ_DATA_RESTORE.cpp  REPEAT_UNTILL.cpp  Seed.cpp  basic_runtime_env.cpp  basic_runtime_env_final_full_run.cpp  basic_runtime_env_map.cpp  basic_runtime_env_refactored.cpp  error.txt  evalExpression.cpp  evalStringExpression.cpp  executeMATops.cpp  fileio.cpp  fullpatch.txt  inlinefunctsupport.cpp  interpeter.cpp  interpreter-backup.cpp  interpreter-big.cpp  (+30 more)
src-old/: 000-global.cpp  0MAT_Support.cpp  0inline_functsupport.cpp  0inline_functsupport_final.cpp  0inline_functsupport_modified.cpp  DEF2.cpp  DIM.cpp  ExtendedMATOPS.hpp  IF.cpp  INPUT.cpp  INPUTFILE.cpp  INTERPRETER.h  LET.cpp  MAT.cpp  MATPRINTFILE.cpp  MATREAD.cpp  ON.cpp  OPEN_CLOSE.cpp  PRINT.cpp  PRINTFILE.cpp  PRINTFILEUSING2.cpp  PRINTUSING_SUPPORT.cpp  REPEAT_UNTILL.cpp  RESTORE_DATA.cpp  Seed.cpp  WHILE_WEND.cpp  basic_runtime_env.cpp  basic_runtime_env_cxx11.cpp  basic_runtime_env_final.cpp  basic_runtime_env_final_full_run.cpp  basic_runtime_env_final_with_on.cpp  basic_runtime_env_refactored.cpp  (+42 more)
(+8 files in other folders)
